force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; SBQQ__Quote__r.SBQQ__Account__c, SBQQ__Quote__r.SBQQ__Account__r.Name)</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>