force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Bank_Note__c.field-meta.xml
<CustomField>
    <fullName>Bank_Note__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if customer uses Bank Note for payment (will add spread to Interest Rate)</inlineHelpText>
    <label>Bank Note</label>
    <type>Checkbox</type>
</CustomField>