force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Bank_Note_Spread__c.field-meta.xml
<CustomField>
    <fullName>Bank_Note_Spread__c</fullName>
    <formula>IF( Bank_Note__c , 0.0035, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Returns the spread to add to the Interest Rate if applies.</inlineHelpText>
    <label>Bank Note Spread</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>