force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Banknote__c.field-meta.xml
<CustomField>
    <fullName>Banknote__c</fullName>
    <formula>IF(Bank_Note__c,  With_Bank_Note__c ,  Without_Bank_Note__c)/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Banknote</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>