force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Base_Price_Goal_W2P__c.field-meta.xml
<CustomField>
    <fullName>Base_Price_Goal_W2P__c</fullName>
    <label>Base Price (+Goal+W2P)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>