force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Base_Price_woGoal_W2P_Volume_Adj_ExtraCo__c.field-meta.xml
<CustomField>
    <fullName>Base_Price_woGoal_W2P_Volume_Adj_ExtraCo__c</fullName>
    <label>Base_Price_woGoal_W2P_Volume_Adj_ExtraCo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>