force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Cap_CNY__c.field-meta.xml
<CustomField>
    <fullName>Cap_CNY__c</fullName>
    <label>Cap CNY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>