force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CIF_Price__c.field-meta.xml
<CustomField>
    <fullName>CIF_Price__c</fullName>
    <label>CIF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>