force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CIP_Price__c.field-meta.xml
<CustomField>
    <fullName>CIP_Price__c</fullName>
    <label>CIP/CPT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>