force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Code_Index_Price__c.field-meta.xml
<CustomField>
    <fullName>Code_Index_Price__c</fullName>
    <formula>text( SBQQ__Quote__r.SBQQ__Opportunity2__r.Market__c ) + &apos;_&apos; +   Index_Grade__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code Index Price</label>
    <type>Text</type>
</CustomField>