force-app/main/default/objects/SBQQ__QuoteLine__c/fields/DAP_DDP_Price__c.field-meta.xml
<CustomField>
    <fullName>DAP_DDP_Price__c</fullName>
    <label>DAP/DDP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>