force-app/main/default/objects/SBQQ__QuoteLine__c/fields/FCA_EXW_Price__c.field-meta.xml
<CustomField>
    <fullName>FCA_EXW_Price__c</fullName>
    <label>FCA/EXW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>