force-app/main/default/objects/SBQQ__QuoteLine__c/fields/formulaSelectedForVolume__c.field-meta.xml
<CustomField>
    <fullName>formulaSelectedForVolume__c</fullName>
    <description>usado para poder sumar la cantidad de lineas seleccionadas sin contar la linea padre del bundle</description>
    <formula>IF( ISBLANK( SBQQ__ProductOption__c ) , 0,  IF( Selected__c ,  SBQQ__Quantity__c , 0) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>formulaSelectedForVolume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>