force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Grades_Matches__c.field-meta.xml
<CustomField>
    <fullName>Grades_Matches__c</fullName>
    <formula>RIGHT(Index_Grade__c, 2)  = Industry_Grade__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checks if product grade matches to clients industry grade</inlineHelpText>
    <label>Grades Match?</label>
    <type>Checkbox</type>
</CustomField>