force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Index_Grade__c.field-meta.xml
<CustomField>
    <fullName>Index_Grade__c</fullName>
    <description>Index Grade for the Quality Grade of the quote line</description>
    <label>Index Grade</label>
    <length>6</length>
    <type>Text</type>
</CustomField>