force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Index_Price__c.field-meta.xml
<CustomField>
    <fullName>Index_Price__c</fullName>
    <label>Index Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>