force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Index_Price_Ton__c.field-meta.xml
<CustomField>
    <fullName>Index_Price_Ton__c</fullName>
    <formula>Index_Price__c * 1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Index Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>