force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Index_Price_w_Quality_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Index_Price_w_Quality_Adjustment__c</fullName>
    <formula>IF(Grades_Matches__c,  Index_Price__c*( 1+  Prime_Disc_if_Grade_Matches__c  ) , Index_Price__c*( 1+  Prime_Disc_if_does_not_Match_Grade__c   ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Applies the Prime/Discount to Index Price</inlineHelpText>
    <label>Index Price w/ Quality Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>