force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Industry_Grade__c.field-meta.xml
<CustomField>
    <fullName>Industry_Grade__c</fullName>
    <description>Grado que corresponde a la Industria. Se utiliza para calcular el ajuste por calidad, al compararlo con la calidad del producto y la industria del cliente. Se completa con Price Rule</description>
    <label>Industry Grade</label>
    <length>6</length>
    <type>Text</type>
</CustomField>