force-app/main/default/objects/SBQQ__QuoteLine__c/fields/isGradeIncorrect__c.field-meta.xml
<CustomField>
    <fullName>isGradeIncorrect__c</fullName>
    <description>Returns true if there are one or more Quite Lines with a Quality Grade that is not included in the QUality Grades selecten in the Opportunity. Is used to validare the right Product Selection</description>
    <formula>Not(CONTAINS( OpptyGrades__c ,  text(Quality_Grade__c) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isGradeIncorrect?</label>
    <type>Checkbox</type>
</CustomField>