force-app/main/default/objects/SBQQ__QuoteLine__c/fields/KPI_SM__c.field-meta.xml
<CustomField>
    <fullName>KPI_SM__c</fullName>
    <formula>(SBQQ__NetPrice__c/SBQQ_ListPrice_woGoal__c)-1</formula>
    <label>KPI SM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>