force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Offspec__c.field-meta.xml
<CustomField>
    <fullName>Offspec__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if the product offered has a different Grade/Quality. Will be used for discounts approval criteria.</inlineHelpText>
    <label>Offspec</label>
    <type>Checkbox</type>
</CustomField>