force-app/main/default/objects/SBQQ__QuoteLine__c/fields/OpptyGrades__c.field-meta.xml
<CustomField>
    <fullName>OpptyGrades__c</fullName>
    <label>OpptyGrades</label>
    <length>100</length>
    <type>Text</type>
</CustomField>