force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Payment_Discount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Discount__c</fullName>
    <label>Payment Discount</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Percent</type>
</CustomField>