force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Prime_Disc_if_does_not_Match_Grade__c.field-meta.xml
<CustomField>
    <fullName>Prime_Disc_if_does_not_Match_Grade__c</fullName>
    <description>Prime or Discount if Product Grade does not match the client&apos;s industry grade</description>
    <label>Prime/Disc if does not Match Grade</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>