force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Prime_Disc_if_Grade_Matches__c.field-meta.xml
<CustomField>
    <fullName>Prime_Disc_if_Grade_Matches__c</fullName>
    <description>Stores the % of discount or prime if product grade matches to clients industry grade</description>
    <label>Prime/Disc if Match Grade</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>