force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Product_Name_q__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_q__c</fullName>
    <description>Returns the product name plus the quality / grade, only if it is a Parent Product</description>
    <formula>IF( ISBLANK( SBQQ__ProductOption__c ) ,     text(Quality_Grade__c) , &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q</label>
    <type>Text</type>
</CustomField>