force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <formula>LEFT(SBQQ__Product__r.ProductCode, 2)</formula>
    <label>Product Type</label>
    <type>Text</type>
</CustomField>