force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Quote_Incoterm__c.field-meta.xml
<CustomField>
    <fullName>Quote_Incoterm__c</fullName>
    <formula>text( SBQQ__Quote__r.Incoterm__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Devuelve el valor del campo Incoterm de la Quote</inlineHelpText>
    <label>Quote Incoterm</label>
    <type>Text</type>
</CustomField>