force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ_ListPrice_woGoal__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_ListPrice_woGoal__c</fullName>
    <label>SBQQ_ListPrice_woGoal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>