force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Selected__c.field-meta.xml
<CustomField>
    <fullName>Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Use to select the product to quote.</inlineHelpText>
    <label>Selected</label>
    <type>Checkbox</type>
</CustomField>