force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Suggested_Price__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Price__c</fullName>
    <description>Price suggests by Model Price. Price before discount or Prime.</description>
    <formula>CASE(Quote_Incoterm__c, &apos;FCA/EXW&apos;, FCA_EXW_Price__c , &apos;DAP/DDP&apos;,  DAP_DDP_Price__c, &apos;CIP&apos;, CIP_Price__c , CIF_Price__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Suggested Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>