force-app/main/default/objects/SBQQ__QuoteLine__c/fields/test_Formula_Fields__c.field-meta.xml
<CustomField>
    <fullName>test_Formula_Fields__c</fullName>
    <formula>SBQQ__Quote__r.Interest_Rate__c +Bank_Note_Spread__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>test Formula Fields</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>