force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Total_Discount_Unit__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount_Unit__c</fullName>
    <formula>SBQQ__TotalDiscountAmount__c /  Volume__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Discount Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>