force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Total_Unbundling_Prices__c.field-meta.xml
<CustomField>
    <fullName>Total_Unbundling_Prices__c</fullName>
    <formula>Unbundling_Goal__c +
Unbundling_Quality__c +
Unbundling_Volume__c + 
Unbundling_Segmentation__c +
Unbundling_BankNote__c + 
Unbundling_Incoterm__c +
Unbundling_Zone__c +
Unbundling_BagSize__c +
Unbundling_PaymentTerm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Unbundling Prices</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>