force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Unbundling_BagSize__c.field-meta.xml
<CustomField>
    <fullName>Unbundling_BagSize__c</fullName>
    <label>Un. Packaging</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>