force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Unbundling_BankNote__c.field-meta.xml
<CustomField>
    <fullName>Unbundling_BankNote__c</fullName>
    <label>Un. Bank Note</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>