force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Unbundling_Goal__c.field-meta.xml
<CustomField>
    <fullName>Unbundling_Goal__c</fullName>
    <label>Un. Goal</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>