force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Unbundling_Incoterm_2__c.field-meta.xml
<CustomField>
    <fullName>Unbundling_Incoterm_2__c</fullName>
    <label>Un. Incoterm FCA/EXW</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>