force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Unbundling_Incoterm__c.field-meta.xml
<CustomField>
    <fullName>Unbundling_Incoterm__c</fullName>
    <formula>CASE( SBQQ__Quote__r.Incoterm__c ,
&apos;FCA/EXW&apos; , Unbundling_Incoterm_2__c ,
&apos;CIP&apos;, Unbundling_Incoterm_3__c ,
&apos;DAP/DDP&apos;, Unbundling_Incoterm_4__c ,
&apos;CIF&apos;, Unbundling_Incoterm_1__c ,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Un. Incoterm</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>