force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Unbundling_PaymentTerm__c.field-meta.xml
<CustomField>
    <fullName>Unbundling_PaymentTerm__c</fullName>
    <label>Un. Payment Term</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>