force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Unbundling_Quality__c.field-meta.xml
<CustomField>
    <fullName>Unbundling_Quality__c</fullName>
    <label>Un. Quality</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>