force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Unbundling_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Unbundling_Segmentation__c</fullName>
    <label>Un. Segmentation</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>