force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Unbundling_Zone__c.field-meta.xml
<CustomField>
    <fullName>Unbundling_Zone__c</fullName>
    <label>Un. Zone</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>