force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Vol_Adj_Cap__c.field-meta.xml
<CustomField>
    <fullName>Vol_Adj_Cap__c</fullName>
    <description>Volume Adjustment Cap in $</description>
    <label>$Vol Adj Cap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>