force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Volume_for_Vol_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Volume_for_Vol_Adjustment__c</fullName>
    <description>Devuelve el volumen a utilizar para efectos de Ajuste por Volumen. Si el campo Total Volume en la Opportunidad tiene valor usará ese. Si no hay valor usará el del campo Volume</description>
    <formula>IF( SBQQ__Quote__r.SBQQ__Opportunity2__r.Total_Volume__c &gt;0, SBQQ__Quote__r.SBQQ__Opportunity2__r.Total_Volume__c,  SBQQ__Quote__r.SBQQ__Opportunity2__r.Volume__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volume for Vol Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>