force-app/main/default/objects/SBQQ__QuoteLine__c/fields/With_Bank_Note__c.field-meta.xml
<CustomField>
    <fullName>With_Bank_Note__c</fullName>
    <label>With Bank Note Adj.</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>