force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Without_Bank_Note__c.field-meta.xml
<CustomField>
    <fullName>Without_Bank_Note__c</fullName>
    <label>Without Bank Note Adj.</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>